@@ -45,7 +45,7 @@ public class SubCodiceErrore {
 	@Override
 	public SubCodiceErrore clone(){
 		SubCodiceErrore sub = new SubCodiceErrore();
-		sub.setSubCodice(this.subCodice!=null ? new Integer(this.subCodice.intValue()) : null);
+		sub.setSubCodice(this.subCodice!=null ? Integer.valueOf(this.subCodice.intValue()) : null);
 		return sub;
 	}
 }
