@@ -81,7 +81,7 @@ public final class AccordiCooperazionePartecipantiList extends Action {
 			
 			AccordiCooperazioneCore acCore = new AccordiCooperazioneCore();
 
-			AccordoCooperazione ac = acCore.getAccordoCooperazione(new Long(id));
+			AccordoCooperazione ac = acCore.getAccordoCooperazione(Long.valueOf(id));
 
 			// Preparo il menu
 			acHelper.makeMenu();
