@@ -81,7 +81,7 @@ public final class AccordiServizioParteComuneAllegatiList extends Action {
 				tipoAccordo = null;
 			
 			
-			AccordoServizioParteComune as = apcCore.getAccordoServizio(new Long(id));
+			AccordoServizioParteComune as = apcCore.getAccordoServizio(Long.valueOf(id));
 
 			// Preparo il menu
 			apcHelper.makeMenu();
