@@ -103,7 +103,7 @@ public final class AccordiServizioParteComuneComponentiAdd extends Action {
 			apcHelper.makeMenu();
 
 			// Prendo il nome
-			AccordoServizioParteComune as = apcCore.getAccordoServizio(new Long(idAccordoInt));
+			AccordoServizioParteComune as = apcCore.getAccordoServizio(Long.valueOf(idAccordoInt));
 			String labelASTitle = apcHelper.getLabelIdAccordo(as); 
 			ServiceBinding serviceBinding = org.openspcoop2.protocol.basic.Utilities.convert(as.getServiceBinding());
 
