@@ -101,7 +101,7 @@ public class AccordiServizioParteComunePortTypeOperationsMessageDel extends Acti
 			// idToRemove[k++] = Integer.parseInt(objTok.nextToken());
 			// }
 			ArrayList<String> optsToRemove = Utilities.parseIdsToRemove(objToRemove);
-			AccordoServizioParteComune as = apcCore.getAccordoServizio(new Long(idInt));
+			AccordoServizioParteComune as = apcCore.getAccordoServizio(Long.valueOf(idInt));
 
 			// Prendo il port-type e l'operation
 			PortType pt = null;
