@@ -108,7 +108,7 @@ public final class AccordiServizioParteComunePortTypesDel extends Action {
 			// idToRemove[k++] = Integer.parseInt(objTok.nextToken());
 			// }
 			ArrayList<String> ptsToRemove = Utilities.parseIdsToRemove(objToRemove);
-			AccordoServizioParteComune as = apcCore.getAccordoServizio(new Long(idInt));
+			AccordoServizioParteComune as = apcCore.getAccordoServizio(Long.valueOf(idInt));
 			IDPortType idPT = new IDPortType();
 			idPT.setIdAccordo(idAccordoFactory.getIDAccordoFromAccordo(as));
 			
@@ -186,7 +186,7 @@ public final class AccordiServizioParteComunePortTypesDel extends Action {
 
 			// Devo rileggere l'accordo dal db, perche' altrimenti
 			// manca l'id dei port-type
-			as = apcCore.getAccordoServizio(new Long(idInt));
+			as = apcCore.getAccordoServizio(Long.valueOf(idInt));
 
 			apcHelper.prepareAccordiPorttypeList(id,as, lista, ricerca, tipoAccordo);
 
