@@ -111,7 +111,7 @@ public final class AccordiServizioParteComuneResourcesRisposteChange extends Act
 			apcHelper.makeMenu();
 
 			// Prendo il nome
-			AccordoServizioParteComune as = apcCore.getAccordoServizio(new Long(idInt));
+			AccordoServizioParteComune as = apcCore.getAccordoServizio(Long.valueOf(idInt));
 			String labelASTitle = apcHelper.getLabelIdAccordo(as); 
 
 			ResourceResponse resourceResponseOLD = null;
@@ -267,7 +267,7 @@ public final class AccordiServizioParteComuneResourcesRisposteChange extends Act
 
 			// Devo rileggere l'accordo dal db, perche' altrimenti
 			// manca l'id dei nuovi port-type
-			as = apcCore.getAccordoServizio(new Long(idInt));
+			as = apcCore.getAccordoServizio(Long.valueOf(idInt));
 			
 			risorsa = null;
 			for (int j = 0; j < as.sizeResourceList(); j++) {
