@@ -86,7 +86,7 @@ public final class AccordiServizioParteComuneResourcesRisposteDel extends Action
 			apcHelper.makeMenu();
 
 			ArrayList<String> resourcesToRemove = Utilities.parseIdsToRemove(objToRemove);
-			AccordoServizioParteComune as = apcCore.getAccordoServizio(new Long(idInt));
+			AccordoServizioParteComune as = apcCore.getAccordoServizio(Long.valueOf(idInt));
 			Resource risorsa =  null;
 			for (int j = 0; j < as.sizeResourceList(); j++) {
 				risorsa = as.getResource(j);
@@ -125,7 +125,7 @@ public final class AccordiServizioParteComuneResourcesRisposteDel extends Action
 			
 			// Devo rileggere l'accordo dal db, perche' altrimenti
 			// manca l'id dei port-type
-			as = apcCore.getAccordoServizio(new Long(idInt));
+			as = apcCore.getAccordoServizio(Long.valueOf(idInt));
 			
 			risorsa = null;
 			for (int j = 0; j < as.sizeResourceList(); j++) {
@@ -139,7 +139,7 @@ public final class AccordiServizioParteComuneResourcesRisposteDel extends Action
 
 			// Devo rileggere l'accordo dal db, perche' altrimenti
 			// manca l'id dei port-type
-			as = apcCore.getAccordoServizio(new Long(idInt));
+			as = apcCore.getAccordoServizio(Long.valueOf(idInt));
 
 			apcHelper.prepareAccordiResourcesResponseList(ricerca, lista, id, as, tipoAccordo, nomeRisorsa);
 
