@@ -1734,7 +1734,7 @@ public final class Monitor extends Action {
 			pd.setPageSize(limit);
 			pd.setSearch("off");
 
-			int totMsg = new Long(countMessaggi).intValue();
+			int totMsg = Long.valueOf(countMessaggi).intValue();
 
 			pd.setNumEntries(totMsg);
 
