@@ -43,7 +43,7 @@ package org.openspcoop2.core.registry.ws.server.filter;
  *         &lt;element name="versione-protocollo" type="{http://www.w3.org/2001/XMLSchema}string" minOccurs="0" maxOccurs="1" />
  *         &lt;element name="descrizione" type="{http://www.w3.org/2001/XMLSchema}string" minOccurs="0" maxOccurs="1" />
  *         &lt;element name="message-type" type="{http://www.openspcoop2.org/core/registry}MessageType" minOccurs="0" maxOccurs="1" />
- *         &lt;element name="orCondition" type="{http://www.w3.org/2001/XMLSchema}boolean" minOccurs="0" maxOccurs="1" default="new Boolean("false")" />
+ *         &lt;element name="orCondition" type="{http://www.w3.org/2001/XMLSchema}boolean" minOccurs="0" maxOccurs="1" default="Boolean.valueOf("false")" />
  *         &lt;element name="limit" type="{http://www.w3.org/2001/XMLSchema}integer" minOccurs="0" maxOccurs="1" />
  *         &lt;element name="offset" type="{http://www.w3.org/2001/XMLSchema}integer" minOccurs="0" maxOccurs="1" />
  *     &lt;/sequence>
@@ -305,7 +305,7 @@ public class SearchFilterAccordoServizioParteSpecifica extends org.openspcoop2.u
 	
 	@javax.xml.bind.annotation.XmlSchemaType(name="boolean")
   @XmlElement(name="orCondition",required=false,nillable=false,defaultValue="false")
-	private Boolean orCondition = new Boolean("false");
+	private Boolean orCondition = Boolean.valueOf("false");
 	
 	public void setOrCondition(Boolean orCondition){
 		this.orCondition = orCondition;
